[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/items/bengal.gd" type="Script" id=1]
[ext_resource path="res://textures/lights/light.png" type="Texture" id=2]
[ext_resource path="res://textures/items/Bengal.png" type="Texture" id=3]
[ext_resource path="res://sound/bengal.ogg" type="AudioStream" id=4]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[sub_resource type="Curve" id=2]
max_value = 3.0
_data = [ Vector2( 0, 1.58182 ), 0.0, -0.439772, 0, 0, Vector2( 0.790698, 1.00909 ), -2.34545, -2.34545, 0, 0, Vector2( 1, 0 ), -5.81672, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.711409, 0.912752 )
colors = PoolColorArray( 0.999512, 0.999512, 0.999512, 0.913725, 1, 0.929412, 0.533333, 0.968627, 0, 0, 0, 0.862745 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 1.0
height = 4.0

[node name="bengal" type="RigidBody2D"]
mass = 0.02
physics_material_override = SubResource( 1 )
linear_damp = 5.0
script = ExtResource( 1 )

[node name="Light" type="Light2D" parent="."]
position = Vector2( 0, -3 )
enabled = false
texture = ExtResource( 2 )
texture_scale = 1.5
energy = 3.0
shadow_enabled = true

[node name="Particles" type="CPUParticles2D" parent="."]
position = Vector2( 0, -3 )
emitting = false
amount = 20
lifetime = 0.3
explosiveness = 0.06
lifetime_randomness = 1.0
direction = Vector2( 0, -1 )
spread = 15.0
gravity = Vector2( 0, 0 )
initial_velocity = 50.0
initial_velocity_random = 0.25
orbit_velocity_random = 1.0
scale_amount_curve = SubResource( 2 )
color_ramp = SubResource( 3 )

[node name="Collision" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="Collision"]
texture = ExtResource( 3 )

[node name="fireOn" type="Timer" parent="."]
wait_time = 0.3
one_shot = true
autostart = true

[node name="fireLow" type="Timer" parent="."]
wait_time = 20.0
autostart = true

[node name="fireBlink" type="Timer" parent="."]
wait_time = 0.02
autostart = true

[node name="TTL" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -19.21
autoplay = true
max_distance = 500.0
attenuation = 7.46426

[connection signal="timeout" from="fireOn" to="." method="_on_fireOn_timeout"]
[connection signal="timeout" from="fireLow" to="." method="_on_fireLow_timeout"]
[connection signal="timeout" from="fireBlink" to="." method="_on_fireBlink_timeout"]
[connection signal="timeout" from="TTL" to="." method="_on_TTL_timeout"]
